109
- Allow disabling --on-active setting

108
- Update to 2.1.10_beta

107
- Update to 2.1.9_beta

105
- Upgrade WebGrab!Plus to 2.1.5_beta

104
- Upgrade siteini.pack to 20161021
- Add system.d timer
- Add license headers

103
- Upgrade mdb ini files

102
- Upgrade WebGrab+Plus to 56.29.pre
- Upgrade siteini.pack to 20160807
- Call user defined pre/post processing

101
- Upgrade WebGrab+Plus to 56.28.pre
- Upgrade siteini.pack to 20160729

100
- Initial addon